# the-linux-programming-interface

./: CMakeLists.txt  README.md
appendix_b/: CMakeLists.txt
appendix_b/t_getopt/: CMakeLists.txt
appendix_b/t_getopt/src/: main.c
file_io_further_details/: CMakeLists.txt
file_io_further_details/bad_exclusive_open/: CMakeLists.txt
file_io_further_details/bad_exclusive_open/src/: main.c
file_io_further_details/e_five/: CMakeLists.txt
file_io_further_details/e_five/src/: main.c
file_io_further_details/e_seven/: CMakeLists.txt
file_io_further_details/e_seven/src/: main.c
file_io_further_details/e_three/: CMakeLists.txt
file_io_further_details/e_three/src/: main.c
file_io_further_details/e_two/: CMakeLists.txt
file_io_further_details/e_two/src/: main.c
file_io_further_details/large_file/: CMakeLists.txt
file_io_further_details/large_file/src/: main.c
file_io_further_details/large_file2/: CMakeLists.txt
file_io_further_details/large_file2/src/: main.c
file_io_further_details/seek_check/: CMakeLists.txt
file_io_further_details/seek_check/src/: main.c
file_io_further_details/t_readv/: CMakeLists.txt
file_io_further_details/t_readv/src/: main.c
file_io_further_details/temporary_files1/: CMakeLists.txt
file_io_further_details/temporary_files1/src/: main.c
file_io_further_details/temporary_files2/: CMakeLists.txt
file_io_further_details/temporary_files2/src/: main.c
file_io_the_universal_io_model/: CMakeLists.txt
file_io_the_universal_io_model/copy/: CMakeLists.txt  input.txt
file_io_the_universal_io_model/copy/src/: main.c
file_io_the_universal_io_model/e_tee/: CMakeLists.txt
file_io_the_universal_io_model/e_tee/src/: main.c
file_io_the_universal_io_model/seek_io/: CMakeLists.txt  input.txt
file_io_the_universal_io_model/seek_io/src/: main.c
memory_allocation/: CMakeLists.txt
memory_allocation/free_and_sbrk/: CMakeLists.txt
memory_allocation/free_and_sbrk/src/: main.c
processes/: CMakeLists.txt
processes/abusing_longjmp/: CMakeLists.txt
processes/abusing_longjmp/src/: main.c
processes/display_env/: CMakeLists.txt
processes/display_env/src/: main.c
processes/modify_env/: CMakeLists.txt
processes/modify_env/src/: main.c
processes/necho/: CMakeLists.txt
processes/necho/src/: main.c
processes/setjmp_vars/: CMakeLists.txt
processes/setjmp_vars/src/: main.c
processes/t_longjmp/: CMakeLists.txt
processes/t_longjmp/src/: main.c
system_and_process_information/: CMakeLists.txt
system_and_process_information/procfs_pidmax/: CMakeLists.txt
system_and_process_information/procfs_pidmax/src/: main.c
system_limits_and_options/: CMakeLists.txt
system_limits_and_options/syslim_fpathconf/: CMakeLists.txt
system_limits_and_options/syslim_fpathconf/src/: main.c
system_limits_and_options/syslim_sysconf/: CMakeLists.txt
system_limits_and_options/syslim_sysconf/src/: main.c
system_programming_concept/: CMakeLists.txt
system_programming_concept/system_calls/: CMakeLists.txt  input.txt
system_programming_concept/system_calls/src/: main.c
test_tlpi/: CMakeLists.txt
test_tlpi/src/: main.c
tlpi_lib/: CMakeLists.txt
tlpi_lib/include/tlpi/: error_functions.h  get_num.h  tlpi_hdr.h
tlpi_lib/src/: error_functions.c  get_num.c
users_and_groups/: CMakeLists.txt
users_and_groups/check_passwords/: CMakeLists.txt
users_and_groups/check_passwords/src/: main.c
users_and_groups/ugid_functions/: CMakeLists.txt
users_and_groups/ugid_functions/inc/: ugid_functions_util.h
users_and_groups/ugid_functions/src/: main.c  ugid_functions_util.c
