add_subdirectory(bad_exclusive_open)
add_subdirectory(t_readv)
add_subdirectory(large_file)
add_subdirectory(large_file2)
add_subdirectory(temporary_files1)
add_subdirectory(temporary_files2)
add_subdirectory(seek_check)
add_subdirectory(e_two)
add_subdirectory(e_three)
add_subdirectory(e_five)
add_subdirectory(e_seven)
